# ipk-exercises

./: README.md
uebung01/: a.out  helloworld.cc
uebung02/: a.out  errors.cc  legalbutwrong  legalbutwrong.cc
uebung02/exampleprogram/: exampleprogram
uebung02/test1f/: exampleprogram.tar.xz
uebung03/: collatz  collatz.cc  fibonacci  fibonacci.cc  midnight  midnight.cc
uebung04/: power  power.cc  root  root.cc
uebung05/: task1a  task1a.cc  task1b  task1b.cc  task1c  task1c.cc  task1d  task1d.cc  task1e  task1e.cc  task2  task2.cc
uebung06/: normal.cc  readvector.cc  statistics.cc  statistics.hh  task1a  task1a.cc  uniform  uniform.cc
uebung07/: CMakeLists.txt  canvas  canvas.cc  canvas.hh  plot  plot.cc  point  point.cc  point.hh  polygon  polygon.cc  polygon.hh
uebung08/: normal  readvector  statistics.cc  statistics.hh  statisticsdriver  statisticsdriver.cc  swap  swap.cc  swap.hh
uebung08/exercise-6/1-2/: CMakeLists.txt  readvector.cc  statistics.cc  statistics.hh
uebung08/exercise-6/3-4/: CMakeLists.txt  letterfrequencies.cc  wordfrequencies.cc  wordfrequencies_unordered.cc
